Fix contrast

--- a/packages/webapp/src/ui/components/molecules/cards/SubjectCard/styles.scss
+++ b/packages/webapp/src/ui/components/molecules/cards/SubjectCard/styles.scss
@@ -2,7 +2,7 @@
   cursor: pointer;
   width: 100%;
   height: 100px;
-  background-color: #7f8393;
+  background-color: #8a8a8a;
   border-radius: 16px;
   box-shadow: 0 0 6px #dedede;
   display: flex;
