--- a/packages/webapp/src/ui/components/molecules/cards/TrendCard/styles.scss
+++ b/packages/webapp/src/ui/components/molecules/cards/TrendCard/styles.scss
@@ -48,7 +48,7 @@
   }
 
   .light-font {
-    color: #7f8393;
+    color: #8a8a8a;
   }
 
   @media (max-width: 450px) {
