--- a/packages/webapp/src/ui/components/pages/Landing/styles.scss
+++ b/packages/webapp/src/ui/components/pages/Landing/styles.scss
@@ -33,7 +33,7 @@
         font-size: 35px;
       }
       > .subtitle {
-        color: #b6bacb;
+        color: #8a8a8a;
         font-size: 25px;
       }
 
